improve logo css when in favorite list